--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <title>Kuku</title>
 <link rel="icon" type="image/svg" href="icon.svg">
 <link rel="apple-touch-icon" href="icon.png" sizes="192x192">
-<script src="manifest.js"></script>
+<link rel="manifest" href="manifest.json">
 <style>
 body {
 	font-family: Courier, monospace, sans-serif;
 	background-color: #fff;
 }
 a {
-	color: #000;
+	color: #ccc;
 	text-decoration: none;
 }
 #container {
@@ -46,10 +46,8 @@ a {
 	flex-direction: row; -webkit-flex-direction: row;
 	justify-content: flex-end; -webkit-justify-content: flex-end;
 	align-items: center; -webkit-align-items: center;
-}
-#version {
 	font-size: 12px;
-	opacity: 0.1;
+	color: #eee;
 }
 .logo {
 	width: 160px; height: 60px; margin: 0px 16px;
@@ -57,10 +55,13 @@ a {
 	flex-direction: row; -webkit-flex-direction: row;
 	justify-content: flex-start; -webkit-justify-content: flex-start;
 	align-items: center; -webkit-align-items: center;
-	font-size: 24px;
 }
 .logo .icon {
-    width: 40px; height: 40px; padding: 10px; margin-left: -28px;
+	width: 40px; height: 40px; padding: 10px; margin-left: -28px;
+}
+.logo .title {
+	font-size: 24px;
+	color: #000;
 }
 .menu {
 	width: 200px; height: 40px; margin: 5px 0px;
@@ -76,16 +77,19 @@ a {
 	flex-direction: column; -webkit-flex-direction: column;
 	justify-content: center; -webkit-justify-content: center;
 	align-items: center; -webkit-align-items: center;
-	font-size: 20px;
+	font-size: 16px;
 	color: #fff;
 	text-decoration: none;
 	transform: scale(1);
+	opacity: 1;
 }
 .menu a:hover {
-	transform: scale(0.9);
+	transform: scale(1);
+	opacity: 0.6;
 }
 .menu a:active {
-	transform: scale(0.8);
+	transform: scale(0.9);
+	opacity: 1;
 }
 </style>
 </head>
@@ -94,7 +98,7 @@ a {
 	<h1 id="header">
 		<div class="logo">
 			<!--img class="icon" src="icon.svg"/!-->
-			<a href="?">Kuku</a>
+			<a class="title" href="?">Kuku</a>
 		</div>
 		<div class="menu">
 			<a id="a10" href="javascript:setLevel('a10');">+10</a>
@@ -106,13 +110,15 @@ a {
 	</h1>
 	<div id="contents" class="cubeScreen"></div>
 	<h6 id="footer">
-		<div id="version">.</div>
+		<div class="author"><!--$author--></div>
+		<div class="version"><!--$version--></div>
+		.
 	</h6>
 </div>
+<script>console.log = () => {};</script>
+<script src="background.js"></script>
 <script src="cube-api-0.8.js"></script>
 <!--Menu--><script>
-	console.log = () => {};
-	document.getElementById("version").innerText = manifest.version.substr(-4);
 
 	// Get query parameters.
 	var query = "" + cubeLoadParam();
@@ -121,14 +127,14 @@ a {
 
 	// Set playing level.
 	var setLevel = (x) => {
-        var levels = ["a10", "t10", "t20", "x9", "x19"];
-        level = levels.includes(x) ? x : "x9";
-        for (let i = 0; i < levels.length; ++i) {
-            let menu = document.getElementById(levels[i]);
-            if (menu) {
+		var levels = ["a10", "t10", "t20", "x9", "x19"];
+		level = levels.includes(x) ? x : "x9";
+		for (let i = 0; i < levels.length; ++i) {
+			let menu = document.getElementById(levels[i]);
+			if (menu) {
 				menu.style.backgroundColor = levels[i] == level ? "#000" : "#888";
 			}
-        }
+		}
 		playing = -1; // Replay.
 	};
 
@@ -142,11 +148,11 @@ a {
 
 	// Create sprites.
 	var numberCounts = 1;
-	var numberSprite = await cubeSprite("resource.svg", 40, 40);
+	var numberSprite = await cubeSprite("image.svg", 40, 40);
 	var probremCounts = 3;
 	var probremSprites = [];
 	for (var i = 0; i < probremCounts; i++) {
-		probremSprites[i] = await cubeSprite("resource.svg", 40, 40);
+		probremSprites[i] = await cubeSprite("image.svg", 40, 40);
 	}
 	var answerCounts = 6;
 	var answerSprites = [];
@@ -154,8 +160,8 @@ a {
 	var pointSprite = null;
 	var answerFrames = [];
 	for (var i = 0; i < answerCounts; i++) {
-		backgroundSprites[i] = await cubeSprite("resource.svg", 40, 40);
-		answerSprites[i] = await cubeSprite("resource.svg", 40, 40);
+		backgroundSprites[i] = await cubeSprite("image.svg", 40, 40);
+		answerSprites[i] = await cubeSprite("image.svg", 40, 40);
 	}
 
 	// Probrem and answer.
