Add share screen button.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,19 @@ async function picoSwitch(script=null) {
 	await pico.app.switchScript(script);
 }
 
+// Share screen image.
+async function picoShareScreen(bgcolors=null, watermark=null) {
+	await pico.app.shareScreen(bgcolors, watermark);
+}
+
 // Enable wake lock.
 function picoWakelock() {
 	pico.app.wakelock();
+}
+
+// Enable wide screen and return true if landscape mode.
+function picoWidescreen(enable=true) {
+	return pico.app.widescreen(enable);
 }
 
 // Enable wide screen and return true if landscape mode.
@@ -84,14 +94,43 @@ pico.App = class {
 		this.script = null; // App script.
 		this.refer = null; // Referenced script.
 		this.title = ""; // App title.
-		this.ver = 0; // App version.
+		this.ver = 0; // Protocol version.
+		this.author = "*"; // App author.
+		this.idver = ""; // App identifier and version.
+
+		// Load app version.
+		let e = document.getElementById("author");
+		if (e && e.innerText) {
+			this.author = e.innerText;
+		} else {
+			if (window.location.hostname) {
+				this.author = window.location.hostname;
+			}
+			if (e) {
+				e.innerText = this.author;
+			}
+		}
+		e = document.getElementById("version");
+		if (e && e.innerText) {
+			this.idver = e.innerText;
+		} else {
+			if (window.location.pathname) {
+				this.idver = window.location.pathname.replace(/[\?\#].*$/, "");
+				if (this.idver.length > 32) {
+					this.idver = ".." + this.idver.slice(-30);
+				}
+			}
+			if (e) {
+				e.innerText = this.idver;
+			}
+		}
 
 		// Load app script.
 		let script = picoStrings("s");
 		if (script) {
 			this.script = script;
 		}
-		var e = document.createElement('script');
+		e = document.createElement('script');
 		e.src = this.script ? this.script : pico.App.script;
 		document.body.appendChild(e);
 
@@ -270,6 +309,19 @@ pico.App = class {
 
 		// True if landscape mode.
 		return window.matchMedia("(min-aspect-ratio: 0.8)").matches;
+	}
+
+	// Share screen image.
+	async shareScreen(bgcolors=null, watermark=null) {
+		if (bgcolors == null) {
+			bgcolors = [223,223,223, 255,255,255];
+		}
+		if (watermark == null) {
+			watermark = this.author + "/" + this.idver;
+		}
+		let file = await picoScreenFile(bgcolors, watermark);
+		let files = [file];
+		await picoShare(null, files);
 	}
 }
 
