--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ pico.App = class {
 			bgcolors = [223,223,223, 255,255,255];
 		}
 		if (watermark == null) {
-			watermark = this.author + "/" + this.idver;
+			watermark = this.author + "/" + this.idver.replace(/[\?\#].*$/, "+");
 		}
 		let file = await picoScreenFile(bgcolors, watermark);
 		let files = [file];
